--- a/html/src/template.html
+++ b/html/src/template.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="mobile-web-app-capable" content="yes">
+    <meta name="theme-color" content="#000000">
     <title><%= htmlWebpackPlugin.options.title %></title>
     <link inline rel="icon" type="image/png" href="favicon.png">
     <% for (const css in htmlWebpackPlugin.files.css) { %>
